--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vant": "^2.12.15",
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
+    "core-js": "^3.23.1",
+    "cropperjs": "^1.5.12",
+    "dayjs": "^1.11.3",
+    "lodash": "^4.17.21",
+    "vant": "2.5.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -31,6 +36,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
